Import of KEICHNER/Win32-Scsv-0.03 from CPAN.
gitpan-cpan-distribution: Win32-Scsv
gitpan-cpan-version:      0.03
gitpan-cpan-path:         KEICHNER/Win32-Scsv-0.03.tar.gz
gitpan-cpan-author:       KEICHNER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -5,3 +5,9 @@ Revision history for Win32-Scsv
 
 0.02    05 Apr 2013
         Add a function convxls to import a csv file into an existing xls file
+
+0.03    06 Apr 2013
+        - rename convcsv()  into xls_2_csv()
+        - rename convxls()  into csv_2_xls()
+        - rename emptyxls() into empty_xls()
+        - allow csv_2_xls() without template, also allow more formatting of columns
