--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-Win32-Scsv Version 0.04
+Win32-Scsv Version 0.05
 
-Convert Excel file to CSV using Win32::OLE
+Convert from and to *.xls, *.csv using Win32::OLE
 
 SYNOPSIS
 
