--- a/Changes
+++ b/Changes
@@ -23,3 +23,6 @@ Revision history for Win32-Scsv
 0.06    10 Apr 2013
         add an option { 'prot' => 1 } to protect the sheet *after* it has been
         written to
+
+0.07    20 Apr 2013
+        add a new function xls_2_vbs() to extract macros from an xls file
