Import of KEICHNER/Win32-Scsv-0.10 from CPAN.
gitpan-cpan-distribution: Win32-Scsv
gitpan-cpan-version:      0.10
gitpan-cpan-path:         KEICHNER/Win32-Scsv-0.10.tar.gz
gitpan-cpan-author:       KEICHNER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -41,3 +41,9 @@ Revision history for Win32-Scsv
 0.09    21 Oct 2013
         use Win32::OLE::Const 'Microsoft Excel';
         Add subroutines: open_xls_book(), open_xls_sheet(), get_lat_row(), get_last_col()
+
+0.10    22 Oct 12013
+        Refactor open_xls_book(), open_xls_sheet():
+        my $ob = get_book('Test01.xls');
+        my $os = $ob->Worksheets('Sheet5') or die "Can't find Sheet";
+        $ob->Close;
