--- a/Changes
+++ b/Changes
@@ -53,3 +53,6 @@ Revision history for Win32-Scsv
         new sub import_vbs_book()
         new sub tmp_book()
         new sub save_pdf()
+
+0.12    19 May 2014
+        Add instruction "Sheets("Zzzz").Visible = True" to xls_2_csv()
