Import of KEICHNER/Win32-Scsv-0.13 from CPAN.
gitpan-cpan-distribution: Win32-Scsv
gitpan-cpan-version:      0.13
gitpan-cpan-path:         KEICHNER/Win32-Scsv-0.13.tar.gz
gitpan-cpan-author:       KEICHNER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -56,3 +56,6 @@ Revision history for Win32-Scsv
 
 0.12    19 May 2014
         Add instruction "Sheets("Zzzz").Visible = True" to xls_2_csv()
+
+0.13    25 Jul 2014
+        New function open_excel()
