Import of KEICHNER/Win32-Scsv-0.14 from CPAN.
gitpan-cpan-distribution: Win32-Scsv
gitpan-cpan-version:      0.14
gitpan-cpan-path:         KEICHNER/Win32-Scsv-0.14.tar.gz
gitpan-cpan-author:       KEICHNER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -59,3 +59,6 @@ Revision history for Win32-Scsv
 
 0.13    25 Jul 2014
         New function open_excel()
+
+0.14    26 Jul 2014
+        Add a check 'my $avail = xlCSV' into build.pm / Makefile.pl
